// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CompanyNameField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd dnsgCl"
    >
      <label
        for="company_name"
      >
        Nazwa pracodawcy
      </label>
      <input
        class="sc-kEqYlL jzZEFj"
        id="testId"
        label="Nazwa pracodawcy"
        name="company_name"
        placeholder="Nazwa pracodawcy"
        value="3232"
      />
      <span
        class="sc-jrsJCI djVSvf"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<CompanyNameField /> matches snapshot 1`] = `
<input
  class="sc-kEqYlL honwIS"
  id="testId"
  label="Nazwa pracodawcy"
  name="company_name"
  placeholder="Nazwa pracodawcy"
  value=""
/>
`;

exports[`<CompanyNameField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd dnsgCl"
    >
      <label
        for="company_name"
      >
        CompanyName
      </label>
      <input
        class="sc-kEqYlL honwIS"
        id="testId"
        label="CompanyName"
        name="company_name"
        placeholder="Nazwa pracodawcy"
        value=""
      />
    </div>
  </form>
</div>
`;
